--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+    <button>
+        <img src="images/1-textes-alternatifs/1-1/btn-aide-point-d-interrogation.png" alt="plus d'information">
+    </button>
+    <button>
+        <img src="images/1-textes-alternatifs/1-1/btn-rechercher-loupe.png" alt="Recherche">
+    </button>
+    <figure>
+        <img src="images/1-textes-alternatifs/1-1/choisir-1-pyramide-des-ages/india-population-pyramid-2014.gif" alt="Graphique sur la population des groupes d'ages en Inde Il y a beaucoup plus de personne jeunes que de vieux">
+        <figcaption> <table></table></figcaption>
+    </figure>
+
+    <img src="images/1-textes-alternatifs/1-1/d0dd9976.png" alt="">
+    <a href="#">
+        <img src="images/1-textes-alternatifs/1-1/pub-assurances.jpg" alt="Publicité Banque Nationale pour des assurances. Recevez jusqu'à 15% de rabais en complétant votre soumission en ligne">
+    </a>
+
+
+
 </body>
 </html>
