Numéro 4 Completer toute les numéro

--- a/index.html
+++ b/index.html
@@ -26,6 +26,73 @@
     </a>
 
 
+    <table>
+        <caption>Recommandations de consommation de poissons selon l’âge, le sexe et la condition physique</caption>
+        <thead>
+            <tr>
+                <td></td>
+                <th id="populationGeneral">Population générale</th>
+                <th id="fillettesAdolescentes">Fillettes et adolescentes</th>
+                <th id="femmeAgeProcreer">Femmes en âge de precréer</th>
+                <th id="FemmesAllaitantes">Femmes allaitantes</th>
+                <th id="FemmesEnceiteEnfants3ans">Femmes enceintes, enfants de moins de 3 ans</th>
+                <th id="AutresPersonnes">Autres personnes sensibles (personnes âgées, immunodéprimées etc.)</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th id="RecommandationGeneral">Recommandation générale</th>
+                <td colspan="6" headers="RecommandationGeneral populationGeneral fillettesAdolescentes femmeAgeProcreer FemmesAllaitantes FemmesEnceiteEnfants3ans AutresPersonnes">Consommer 2 portions de poissons par semaine, dont une à forte teneur en EPA et DHA (saumon*, sardine*, maquereau*, hareng*, truite fumée**), en variant les espèces et les lieux d’approvisionnement</td>
+            </tr>
+            <tr>
+                <th id="poissonsEauDouce">Poissons d’eau douce fortement bioaccumulateurs (anguille, barbeau, brème, carpe, silure)</th>
+
+                <td headers="poissonsEauDouce populationGeneral">À limiter à 2 fois par mois</td>
+
+                <td colspan="4" headers="poissonsEauDouce fillettesAdolescentes femmeAgeProcreer FemmesAllaitantes FemmesEnceiteEnfants3ans ">À limiter à 1 fois tout les deux mois</td>
+
+                <td headers="poissonsEauDouce AutresPersonnes">À limiter à deux fois par mois</td>
+            </tr>
+            <tr>
+                <th id="poissonsPredateur">Poissons prédateurs sauvages***</th>
+                <td colspan="3" rowspan="2" headers="poissonsPredateur opulationGeneral fillettesAdolescentes femmeAgeProcreer">Pas de recommandation spécifique</td>
+                <td colspan="2" headers="poissonsPredateur FemmesAllaitantes FemmesEnceiteEnfants3ans">À limiter</td>
+                <td rowspan="2" headers="poissonsPredateur AutresPersonnes">Pas de recommandation spécifique</td>
+
+            </tr>
+            <tr>
+                <th id="espadonMarlin">Espadon, marlin, siki, requin et lamproie</th>
+                <td colspan="2" headers="espadonMarlin FemmesAllaitantes FemmesEnceiteEnfants3ans">À éviter</td>
+            </tr>
+            <tr>
+                <th id="MesureHygiene">Mesures spécifiques d’hygiène à respecter</th>
+                <td colspan="4" headers="MesureHygiene populationGeneral fillettesAdolescentes femmeAgeProcreer FemmesAllaitantes">
+                    <ul>
+                        <li>Cuisson à cœur du poisson de mer frais ou congélation pendant 7 jours dans un congélateur domestique après éviscération rapide du poisson pêché pour une consommation crue</li>
+                        <li>Éviter la consommation de coquillages, s’ils ne proviennent pas d’une zone d’élevage autorisée et contrôlée</li>
+                        <li>Consommation des coquillages et fruits de mer crus dans les deux heures qui suivent la sortie du réfrigérateur</li>
+                    </ul>
+                </td>
+                <td colspan="2" headers="MesureHygiene FemmesEnceiteEnfants3ans AutresPersonnes">
+                    <ul>
+                        <li>Éviter la consommation de poissons crus ou insuffisamment cuits et de poissons fumés</li>
+                        <li>Éviter la consommation de coquillages crus ou peu cuits.</li>
+                        <li>Éviter la consommation de crustacés décortiqués vendus cuits (cuire soi- même les crustacés)</li>
+                    </ul>
+                </td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <td colspan="7">
+                <ul>
+                    <li>* tout type de conservation (frais, surgelé, fumé, conserve...)</li>
+                    <li>** la truite fumée est une espèce différente de la truite de rivière « classique »</li>
+                    <li>*** lotte (baudroie), loup (bar), bonite, anguille, empereur, grenadier, flétan, brochet, dorade, raie, sabre, thon...</li>
+                </ul>
+            </td>
+        </tfoot>
+    </table>
+
 
 </body>
 </html>
